docs: 更新RAG笔记本以包含层次化索引的详细解释
在笔记本中增加了对层次化索引方法的详细描述，解释了其相较于传统RAG方法的优势，并说明了何时使用层次化RAG和何时使用标准RAG。同时更新了模型名称和API请求中的模型参数。

- 为层次化检索方法增加了中文描述和具体应用场景的解释。
- 更新了`create_embeddings`函数中的模型参数为`Qwen/Qwen3-Embedding-4B`。
- 将API请求中的模型参数从`meta-llama/Llama-3.2-3B-Instruct`改为`deepseek-ai/DeepSeek-V3`。
- 添加了关于层次化检索和标准检索的详细分析，包括各自的优劣和使用场景。
- 更新了代码执行次数和输出结果以反映模型变化后的检索效果。
- 修改了警告信息中的路径以反映新的运行环境。
- 添加了关于如何结合使用层次化RAG和标准RAG的建议示例。

Closes #123

--- a/18_层次化RAG.ipynb
+++ b/18_层次化RAG.ipynb
@@ -8,22 +8,32 @@
     }
    },
    "source": [
-    "# Hierarchical Indices for RAG\n",
+    "# Hierarchical Indices for RAG  \n",
+    "# 层次化索引RAG\n",
+    "In this notebook, I implement a hierarchical indexing approach for RAG systems. This technique improves retrieval by using a two-tier search method: first identifying relevant document sections through summaries, then retrieving specific details from those sections.  \n",
+    "在此笔记本中，我实现了一个用于RAG系统的层次化索引方法。这种技术通过使用两层搜索方法来改进检索：首先通过摘要识别相关文档部分，然后从这些部分中检索特定细节。\n",
     "\n",
-    "In this notebook, I implement a hierarchical indexing approach for RAG systems. This technique improves retrieval by using a two-tier search method: first identifying relevant document sections through summaries, then retrieving specific details from those sections.\n",
+    "Traditional RAG approaches treat all text chunks equally, which can lead to:  \n",
+    "传统的RAG方法将所有文本块视为相等的，这可能导致：\n",
     "\n",
-    "Traditional RAG approaches treat all text chunks equally, which can lead to:\n",
+    "- Lost context when chunks are too small  \n",
+    "当块太小时丢失上下文\n",
+    "- Irrelevant results when the document collection is large  \n",
+    " 文档集合太大时，不相关的结果\n",
+    "- Inefficient searches across the entire corpus  \n",
+    " 全文搜索效率低下\n",
     "\n",
-    "- Lost context when chunks are too small\n",
-    "- Irrelevant results when the document collection is large\n",
-    "- Inefficient searches across the entire corpus\n",
+    "Hierarchical retrieval solves these problems by:  \n",
+    "层次化检索通过：\n",
     "\n",
-    "Hierarchical retrieval solves these problems by:\n",
-    "\n",
-    "- Creating concise summaries for larger document sections\n",
-    "- First searching these summaries to identify relevant sections\n",
-    "- Then retrieving detailed information only from those sections\n",
-    "- Maintaining context while preserving specific details"
+    "- Creating concise summaries for larger document sections  \n",
+    "为较大的文档部分创建简洁的摘要\n",
+    "- First searching these summaries to identify relevant sections  \n",
+    " 首先搜索这些摘要以识别相关部分\n",
+    "- Then retrieving detailed information only from those sections  \n",
+    " 然后仅从这些部分中检索详细信息\n",
+    "- Maintaining context while preserving specific details  \n",
+    " 同时保持上下文，保留特定细节"
    ]
   },
   {
@@ -59,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_embeddings(texts, model=\"BAAI/bge-en-icl\"):\n",
+    "def create_embeddings(texts, model=\"Qwen/Qwen3-Embedding-4B\"):\n",
     "    \"\"\"\n",
     "    Create embeddings for the given texts.\n",
     "    \n",
@@ -327,7 +337,7 @@
     "\n",
     "    # Make a request to the OpenAI API to generate the summary\n",
     "    response = client.chat.completions.create(\n",
-    "        model=\"meta-llama/Llama-3.2-3B-Instruct\",  # Specify the model to use\n",
+    "        model=\"deepseek-ai/DeepSeek-V3\",  # Specify the model to use\n",
     "        messages=[\n",
     "            {\"role\": \"system\", \"content\": system_prompt},  # System message to guide the assistant\n",
     "            {\"role\": \"user\", \"content\": f\"Please summarize this text:\\n\\n{truncated_text}\"}  # User message with the text to summarize\n",
@@ -541,7 +551,7 @@
     "\n",
     "    # Generate the response using the OpenAI API\n",
     "    response = client.chat.completions.create(\n",
-    "        model=\"meta-llama/Llama-3.2-3B-Instruct\",  # Specify the model to use\n",
+    "        model=\"deepseek-ai/DeepSeek-V3\",  # Specify the model to use\n",
     "        messages=[\n",
     "            {\"role\": \"system\", \"content\": system_message},  # System message to guide the assistant\n",
     "            {\"role\": \"user\", \"content\": f\"Context:\\n\\n{context}\\n\\nQuestion: {query}\"}  # User message with context and query\n",
@@ -816,7 +826,7 @@
     "\n",
     "    # Make a request to the OpenAI API to generate the comparison analysis\n",
     "    response = client.chat.completions.create(\n",
-    "        model=\"meta-llama/Llama-3.2-3B-Instruct\",\n",
+    "        model=\"deepseek-ai/DeepSeek-V3\",\n",
     "        messages=[\n",
     "            {\"role\": \"system\", \"content\": system_prompt},  # System message to guide the assistant\n",
     "            {\"role\": \"user\", \"content\": user_prompt}  # User message with the query and responses\n",
@@ -915,7 +925,7 @@
     "\n",
     "    # Make a request to the OpenAI API to generate the overall analysis\n",
     "    response = client.chat.completions.create(\n",
-    "        model=\"meta-llama/Llama-3.2-3B-Instruct\",\n",
+    "        model=\"deepseek-ai/DeepSeek-V3\",\n",
     "        messages=[\n",
     "            {\"role\": \"system\", \"content\": system_prompt},  # System message to guide the assistant\n",
     "            {\"role\": \"user\", \"content\": user_prompt}  # User message with the evaluations summary\n",
@@ -966,14 +976,16 @@
       "Creating embeddings for summaries...\n",
       "Creating embeddings for detailed chunks...\n",
       "Created vector stores with 15 summaries and 47 chunks\n",
-      "Performing hierarchical retrieval for query: What are the key applications of transformer models in natural language processing?\n"
+      "Performing hierarchical retrieval for query: What are the key applications of transformer models in natural language processing?\n",
+      "Retrieved 3 relevant summaries\n",
+      "Retrieved 10 detailed chunks from relevant pages\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\faree\\AppData\\Local\\Temp\\ipykernel_9608\\2918097221.py:62: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "/var/folders/_j/2k9x06813sg300z_yf9bj74w0000gn/T/ipykernel_59618/2918097221.py:62: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  \"similarity\": float(score)  # Add the similarity score\n"
      ]
     },
@@ -981,13 +993,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Retrieved 3 relevant summaries\n",
-      "Retrieved 10 detailed chunks from relevant pages\n",
       "\n",
       "=== Response ===\n",
-      "I couldn't find any information about transformer models in the provided context. The context appears to focus on various applications of Artificial Intelligence (AI) and Machine Learning (ML), including computer vision, deep learning, reinforcement learning, and more. However, transformer models are not mentioned.\n",
+      "The context does not explicitly mention \"transformer models\" or their specific applications in natural language processing (NLP). However, based on the general discussion of NLP techniques (Page 2), some implied applications that align with transformer models (though not named) include:\n",
       "\n",
-      "If you're looking for information on transformer models, I'd be happy to try and help you find it. Alternatively, if you have any other questions based on the provided context, I'd be happy to try and assist you.\n",
+      "1. **Machine Translation** – Transforming text from one language to another (Page 2).  \n",
+      "2. **Text Summarization** – Condensing long documents into shorter summaries (Page 2).  \n",
+      "3. **Sentiment Analysis** – Analyzing emotions or opinions in text (Page 2).  \n",
+      "4. **Chatbots** – Generating human-like conversational responses (Page 2).  \n",
+      "\n",
+      "For explicit details about transformer models (e.g., BERT, GPT), the provided context does not contain relevant information. Let me know if you'd like a broader explanation beyond the given text.\n",
       "Query: How do transformers handle sequential data compared to RNNs?\n",
       "\n",
       "=== Comparing RAG approaches for query: How do transformers handle sequential data compared to RNNs? ===\n",
@@ -996,7 +1011,7 @@
       "Loading existing vector stores...\n",
       "Performing hierarchical retrieval for query: How do transformers handle sequential data compared to RNNs?\n",
       "Retrieved 3 relevant summaries\n",
-      "Retrieved 10 detailed chunks from relevant pages\n",
+      "Retrieved 11 detailed chunks from relevant pages\n",
       "\n",
       "Running standard RAG...\n",
       "Extracting text from data/AI_Information.pdf...\n",
@@ -1006,47 +1021,40 @@
       "Retrieved 15 chunks with standard RAG\n",
       "\n",
       "=== OVERALL ANALYSIS ===\n",
-      "Based on the provided evaluation, I will provide a comprehensive analysis of the relative strengths and weaknesses of hierarchical RAG compared to standard RAG.\n",
+      "### **Comprehensive Analysis: Hierarchical RAG vs. Standard RAG**  \n",
       "\n",
-      "**Overview of Hierarchical RAG and Standard RAG**\n",
+      "#### **1. When Hierarchical RAG Performs Better (and Why)**  \n",
+      "- **Complex, Multi-Faceted Queries**: Hierarchical RAG excels when the query requires synthesizing information from multiple levels of granularity (e.g., high-level overviews + detailed technical explanations). For example, in the query *\"How do transformers handle sequential data compared to RNNs?\"*, hierarchical retrieval can first fetch broad conceptual comparisons and then drill into specifics (e.g., attention mechanisms vs. recurrence).  \n",
+      "- **Redundancy Reduction**: By retrieving fewer but more structured chunks (11 vs. 15 in the example), hierarchical RAG avoids redundant or overlapping information, leading to more concise and focused responses.  \n",
+      "- **Contextual Depth**: Hierarchical organization allows the model to \"navigate\" the document structure (e.g., section headings → subsections), improving coherence in long-form answers.  \n",
       "\n",
-      "Hierarchical RAG (Retrieval Algorithm for Generating) is an extension of the standard RAG approach, which involves dividing the input text into smaller chunks or sub-sequences to facilitate more efficient and effective retrieval. The hierarchical approach further divides these chunks into smaller sub-chunks, allowing for more granular and detailed retrieval.\n",
+      "#### **2. When Standard RAG Performs Better (and Why)**  \n",
+      "- **Simple, Factual Queries**: For straightforward questions (e.g., *\"What is the capital of France?\"*), standard RAG’s flat retrieval is faster and equally effective, as hierarchical decomposition adds unnecessary overhead.  \n",
+      "- **Broad Coverage Needs**: If the query benefits from maximal context diversity (e.g., brainstorming or open-ended questions), standard RAG’s larger chunk count (15 vs. 11 here) may capture more varied perspectives.  \n",
+      "- **Documents Without Clear Hierarchy**: For unstructured or poorly organized source material, hierarchical retrieval may struggle to identify meaningful levels of abstraction, while standard RAG operates reliably.  \n",
       "\n",
-      "Standard RAG, on the other hand, uses a single chunk size to retrieve relevant information from the input text.\n",
+      "#### **3. Strengths and Weaknesses**  \n",
+      "| **Aspect**               | **Hierarchical RAG**                                      | **Standard RAG**                                  |  \n",
+      "|---------------------------|-----------------------------------------------------------|---------------------------------------------------|  \n",
+      "| **Retrieval Quality**      | Higher precision for multi-scale queries; less redundant. | Broader coverage; better for simple/factual needs.|  \n",
+      "| **Response Coherence**     | More logically structured (e.g., overview → details).     | May lack narrative flow; prone to repetition.     |  \n",
+      "| **Speed/Overhead**         | Slower due to multi-stage retrieval.                      | Faster, simpler pipeline.                         |  \n",
+      "| **Dependency on Source**   | Requires well-structured documents.                       | Works with any text.                              |  \n",
+      "| **Handling Ambiguity**     | Better at disambiguating via hierarchical context.        | May retrieve conflicting snippets.                |  \n",
       "\n",
-      "**Strengths of Hierarchical RAG**\n",
+      "#### **4. Recommendations**  \n",
+      "- **Use Hierarchical RAG When**:  \n",
+      "  - Queries demand layered explanations (e.g., technical comparisons, conceptual overviews).  \n",
+      "  - Source documents have clear sections/subsections (e.g., research papers, manuals).  \n",
+      "  - Conciseness and logical flow are priorities.  \n",
+      "- **Use Standard RAG When**:  \n",
+      "  - Queries are simple or require breadth over depth.  \n",
+      "  - Documents are unstructured (e.g., chat logs, social media).  \n",
+      "  - Latency is critical (e.g., real-time applications).  \n",
       "\n",
-      "1. **Improved Retrieval Quality**: Hierarchical RAG's ability to divide the input text into smaller sub-chunks allows for more precise retrieval, as it can capture subtle nuances and relationships between words and phrases that may be missed by standard RAG.\n",
-      "2. **Enhanced Response Generation**: By considering multiple levels of granularity, hierarchical RAG can generate more accurate and informative responses, as it can take into account the context and relationships between different parts of the input text.\n",
-      "3. **Better Handling of Complex Input Text**: Hierarchical RAG is particularly well-suited for handling complex input text, such as long documents or texts with multiple layers of abstraction.\n",
+      "**Hybrid Approach**: For optimal results, combine both methods—use hierarchical retrieval for complex queries and fall back to standard retrieval for others, or implement a router to dynamically choose between them.  \n",
       "\n",
-      "**Weaknesses of Hierarchical RAG**\n",
-      "\n",
-      "1. **Increased Computational Complexity**: The hierarchical approach requires more computational resources and processing power, as it needs to handle multiple levels of granularity.\n",
-      "2. **Higher Risk of Overfitting**: The increased number of parameters and complexity of the hierarchical model can lead to overfitting, particularly if the training data is limited or biased.\n",
-      "\n",
-      "**Strengths of Standard RAG**\n",
-      "\n",
-      "1. **Simpler and Faster**: Standard RAG is a simpler and faster approach, as it only requires a single chunk size and less computational resources.\n",
-      "2. **Less Risk of Overfitting**: The standard model has fewer parameters and is less prone to overfitting, making it a more robust and reliable choice.\n",
-      "\n",
-      "**Weaknesses of Standard RAG**\n",
-      "\n",
-      "1. **Limited Retrieval Quality**: Standard RAG's single chunk size can lead to limited retrieval quality, as it may not capture the full range of nuances and relationships between words and phrases.\n",
-      "2. **Less Effective for Complex Input Text**: Standard RAG is less effective for handling complex input text, as it may struggle to capture the context and relationships between different parts of the text.\n",
-      "\n",
-      "**When to Use Each Approach**\n",
-      "\n",
-      "1. **Use Hierarchical RAG**:\n",
-      "\t* When dealing with complex input text, such as long documents or texts with multiple layers of abstraction.\n",
-      "\t* When high retrieval quality and response generation are critical, such as in applications requiring accurate and informative responses.\n",
-      "\t* When computational resources are not a concern, and the benefits of hierarchical retrieval outweigh the costs.\n",
-      "2. **Use Standard RAG**:\n",
-      "\t* When dealing with simple input text, such as short documents or texts with a clear and concise structure.\n",
-      "\t* When computational resources are limited, and speed is a priority.\n",
-      "\t* When the goal is to quickly retrieve relevant information, rather than generating accurate and informative responses.\n",
-      "\n",
-      "In conclusion, hierarchical RAG offers improved retrieval quality and response generation, but at the cost of increased computational complexity and risk of overfitting. Standard RAG, on the other hand, is simpler and faster, but may have limited retrieval quality and be less effective for complex input text. The choice of approach depends on the specific requirements and constraints of the application.\n"
+      "**Example from Query 1**: The hierarchical approach’s ability to summarize *\"transformers vs. RNNs\"* more accurately (despite limited context) suggests it better handles comparative analysis by leveraging document structure. Standard RAG’s larger chunk count might introduce noise (e.g., off-topic details about RNN variants).\n"
      ]
     }
    ],
@@ -1086,7 +1094,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv-new-specific-rag",
+   "display_name": "rag",
    "language": "python",
    "name": "python3"
   },
@@ -1100,7 +1108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
